--- a/src/restaurants/templates/restaurants/restaurant.html
+++ b/src/restaurants/templates/restaurants/restaurant.html
@@ -5,8 +5,10 @@
 <h3>Restaurants</h3>
 
 <ul>
-	{% for item in list %}
-	<li>{{ item }}</li>
+	{% for item in object_list %}
+	<li>
+		{{ item.name }} , {{ item.location }} <br> {{ item.category }}
+	</li>
 	{% endfor %}
 </ul>
 {% endblock %}
