--- a/src/restaurants/templates/restaurants/restaurant.html
+++ b/src/restaurants/templates/restaurants/restaurant.html
@@ -7,7 +7,7 @@
 <ul>
 	{% for item in object_list %}
 	<li>
-		{{ item.name }} , {{ item.location }} <br> {{ item.category }}
+		<a href="{{ item.slug }}/">{{ item.name }}</a> , {{ item.location }} <br> {{ item.category }}
 	</li>
 	{% endfor %}
 </ul>
