--- a/src/restaurants/templates/restaurants/restaurant_detail.html
+++ b/src/restaurants/templates/restaurants/restaurant_detail.html
@@ -2,7 +2,7 @@
 {% block home_title %}Restaurants{% endblock %}
 
 {% block content %}
-<h1>{{ object.name }} <small>{{ object.category }}</small></h1>
+<h1>{{ object.title }} <small>{{ object.category }}</small></h1>
 <p>{{ object.location }}</p>
 <p>{{ object.timestamp }}, Updated {{ object.updated|timesince }} ago</p>
 {% endblock %}
