--- a/src/templates/snippets/navigation.html
+++ b/src/templates/snippets/navigation.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<h1>Welcome There!</h1>
-	<a href="/">Home</a>
-	<a href="/restaurant">Restaurant</a>
-	<a href="/about">About</a>
-	<a href="/contact">Contact</a>
+	<a href="{% url 'home' %}">Home</a>
+	<a href="{% url 'restaurant:list' %}">Restaurant</a>
+	<a href="{% url 'about' %}">About</a>
+	<a href="{% url 'contact' %}">Contact</a>
 </div>
