--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
-{% block home_title %}Add Restaurants{% endblock %}
+{% block home_title %}Add {{ title }}{% endblock %}
 
 {% block content %}
-<h3>Restaurants</h3>
+<div class='container'>
+	<h3>{{ title }}</h3>
 
-{% if form.errors.non_field_errors %}
-{{ form.errors.non_field_errors }}
-{% endif %}
-<form method='POST'> {% csrf_token %}
-	{{ form.as_p }}
+	{% if form.errors.non_field_errors %}
+	{{ form.errors.non_field_errors }}
+	{% endif %}
 
-	<button type="submit">Save</button>
-</form>
+	<form method='POST'> {% csrf_token %}
+		{{ form.as_p }}
+
+		<button type="submit">Save</button>
+	</form>
+	<br>
+</div>
 {% endblock %}
