--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -5,15 +5,7 @@
 <div class='container'>
 	<h3>{{ title }}</h3>
 
-	{% if form.errors.non_field_errors %}
-	{{ form.errors.non_field_errors }}
-	{% endif %}
-
-	<form method='POST'> {% csrf_token %}
-		{{ form.as_p }}
-
-		<button type="submit">Save</button>
-	</form>
+	{% include 'snippets/form.html' %}
 	<br>
 </div>
 {% endblock %}
