--- a/src/templates/snippets/navigation.html
+++ b/src/templates/snippets/navigation.html
@@ -1,7 +1,10 @@
 <div class="container">
 	<h1>Welcome There!</h1>
 	<a href="{% url 'home' %}">Home</a>
+	{% if request.user.is_authenticated %}
 	<a href="{% url 'restaurant:list' %}">Restaurant</a>
+	<a href="{% url 'menus:list' %}">Menu-Items</a>
+	{% endif %}
 	<a href="{% url 'about' %}">About</a>
 	<a href="{% url 'contact' %}">Contact</a>
 </div>
